--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.0.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "ejs": "~2.5.7",
@@ -18,12 +19,15 @@
     "font-awesome": "^4.7.0",
     "http-errors": "~1.6.2",
     "jquery": "^3.5.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.4",
     "morgan": "~1.9.0",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "serve-favicon": "^2.5.0"
   },
   "engines": {
     "node": "^10.15.0",
@@ -37,10 +41,12 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.8",
     "@types/express-session": "^1.17.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.7.36",
     "@types/morgan": "^1.9.1",
     "@types/node": "^10.17.31",
     "@types/passport": "^1.0.4",
+    "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.33",
     "@types/passport-local-mongoose": "^4.0.13"
   },
